layout bug

--- a/public/less/demo.less
+++ b/public/less/demo.less
@@ -39,7 +39,7 @@ footer {
 }
 
 .navbar-inverse .navbar-brand {
-  padding: 0 36px 0 12px;
+  padding: 0 36px 0 12px !important;
   margin-top: 6px;
 }
 
